# hsc3-data

./: .boring  .hlint.yaml  Makefile  README  README.md  cabal.project  hsc3-data.cabal
Sound/File/NeXT/: Vector.hs
Sound/SC3/Data/: ATS.hs  Buffer.hs  Byte.hs  CMUdict.hs  Colour.hs  Geography.hs  Gnus.hs  JSON.hs  LPC.hs  Modal.hs  PVOC.hs  Reverb.hs  SFZ.hs  SVG.hs  Sfz.hs  Speech.hs  Timestamp.hs  Trace.hs  URandom.hs  VST.hs  Vowel.hs  XML.hs
Sound/SC3/Data/AKAI/: AKP.hs  S900.hs
Sound/SC3/Data/Array/: CSV.hs
Sound/SC3/Data/Bitmap/: PBM.hs  Type.hs
Sound/SC3/Data/Chemistry/: AFLOW.hs  CLS.hs  Elements.hs  FASTA.hs  IUPAC.hs  MOL.hs  MP.hs  PDB.hs  POSCAR.hs  STRUCT.hs  XYZ.hs
Sound/SC3/Data/Fairlight/: CMI.hs  Cmi.hs
Sound/SC3/Data/Geography/: Core.hs  G.hs
Sound/SC3/Data/Geometry/: OBJ.hs  Obj.hs  PLY.hs  Ply.hs  Schlegel.hs  Tutte.hs
Sound/SC3/Data/Graph/: Dot.hs
Sound/SC3/Data/Image/: PGM.hs  Plain.hs  Type.hs
Sound/SC3/Data/Korg/: Minilogue.hs
Sound/SC3/Data/Math/: Bourke.hs  Bouwkamp.hs  Easing.hs  Hermite.hs  IFS.hs  Interpolation.hs  Loudness.hs  Sprott_1993a.hs  Types.hs  Weaire_Phelan.hs
Sound/SC3/Data/Midi/: Plain.hs
Sound/SC3/Data/Roland/: D50.hs
Sound/SC3/Data/Speech/: CS.hs  Homophones.hs  PB.hs  Stk.hs
Sound/SC3/Data/String/: ByteString.hs  String.hs
Sound/SC3/Data/UI/: HTML.hs  ST.hs  WS.hs  WV.hs
Sound/SC3/Data/VST/: Obxd.hs
Sound/SC3/Data/WT/: AKWF.hs
Sound/SC3/Data/X11/: Ptr.hs
Sound/SC3/Data/XML/: CCCBR.hs  JVX.hs  KML.hs  SVG.hs  SVL.hs
Sound/SC3/Data/Yamaha/: DX7.hs  TX816.hs  YC20.hs
Sound/Sc3/Data/: ATS.hs  Ats.hs  Buffer.hs  Byte.hs  CMUdict.hs  CmuDict.hs  Colour.hs  Gnus.hs  Json.hs  LPC.hs  Lpc.hs  MimeType.hs  Modal.hs  PVOC.hs  Pvoc.hs  Reaper.hs  Reverb.hs  Sfz.hs  Timestamp.hs  Trace.hs  URandom.hs  Urandom.hs  VST.hs  Vst.hs  XML.hs  Xml.hs
Sound/Sc3/Data/AKAI/: AKP.hs  S900.hs
Sound/Sc3/Data/Akai/: Akp.hs  S900.hs
Sound/Sc3/Data/Array/: CSV.hs  Csv.hs
Sound/Sc3/Data/Bitmap/: PBM.hs  Pbm.hs  Type.hs
Sound/Sc3/Data/Chemistry/: AFLOW.hs  Aflow.hs  CLS.hs  Cls.hs  Elements.hs  FASTA.hs  Fasta.hs  IUPAC.hs  Iupac.hs  MOL.hs  MP.hs  Mol.hs  Mp.hs  PDB.hs  POSCAR.hs  Pdb.hs  Poscar.hs  STRUCT.hs  Struct.hs  XYZ.hs  Xyz.hs
Sound/Sc3/Data/Fairlight/: Cmi.hs
Sound/Sc3/Data/Geography/: Core.hs  G.hs  Loc.hs
Sound/Sc3/Data/Geometry/: Obj.hs  Ply.hs  Tutte.hs
Sound/Sc3/Data/Graph/: Dot.hs
Sound/Sc3/Data/Image/: PGM.hs  Pgm.hs  Plain.hs  Type.hs
Sound/Sc3/Data/Korg/: Minilogue.hs
Sound/Sc3/Data/Math/: ActivationFunction.hs  Bourke.hs  Bouwkamp.hs  Easing.hs  Hermite.hs  IFS.hs  Ifs.hs  Loudness.hs  Sprott_1993a.hs  Types.hs  Weaire_Phelan.hs
Sound/Sc3/Data/Midi/: Plain.hs
Sound/Sc3/Data/Roland/: D50.hs
cmd/: Makefile  ats.hs  au-to-img.hs  au-to-pbm.hs  au-to-pgm.hs  au-to-png.hs  chemistry.hs  csv-mnd-to-midi.hs  csv-mnd-to-pgm.hs  csv-plot.hs  csv-to-img.hs  d50-sysex.hs  d50.hs  data.hs  dx7-hex.hs  dx7-unpack.c  dx7.hs  gen-data.hs  hex.hs  img-edit.hs  img-query.hs  img-to-pbm.hs  img-to-pgm.hs  img-to-sf.hs  img-to-tbl.hs  kml-to-csv.hs  lpc.hs  lxvst-stat.cpp  midi-to-csv-mnd.hs  midi-to-mnd.hs  midi-to-text.hs  midi.hs  pbm-indices.hs  pbm-to-csv-mnd.hs  pbm-to-tbl.hs  pbm-trace.hs  pdb.hs  pgm-to-au.hs  pvoc-header.hs  pvoc.hs  (+11 more)
data/akai/S900/: SL-501.img  SL-502.img
data/ats/: metal.ats  pf-c5.4.ats
data/cartography/: ContinentOutlines-LowResolution.json  Makefile  README  lu-continents.json
data/chemistry/: Makefile
data/chemistry/json/: README  cls.json  elements.json
data/colour/: ColourGradients.json  ColourPalettes.json  Makefile  README  SulejColourGradients.json  SulejColourPalettes.json  color-checker.json  colour-checker-chart.json  svg.csv  svg.json
data/csv/chemistry/: covalent-radii.csv  elemental-radii.csv
data/csv/mnd/: 1080-C01.csv
data/csv/trace/: a.csv  b.csv
data/csv/xyz/: a.csv
data/font/: ibm.bdf
data/geometry/fradin/: DualUniform.json  FradinPolyhedraCatalogue.json  JohnsonSolids.json  README  StellatedCuboctohedra.json  StellatedRhombicDodecahedra.json  UniformPolyhedra.json  Zonohedra.json
data/geometry/holmes/: HolmesPolyhedronCatalogue.json  README
data/geometry/levskaya/: LevskayaPolyhedraCatalogue.json  README
data/geometry/mclure/: README  mcClurePolyhedraCatalogue.json  mcClurePolyhedraSpanningTreeCatalogue.json
data/geometry/planar/: Makefile  PlanarConvexPolytopeGraphCatalogue.json  PlanarCubicGraphCatalogue.json  PlanarHighlyIrregularGraphCatalogue.json  PlanarNonHamiltonianGraphCatalogue.json  PlanarQuadrangulationsCatalogue.json  PlanarRegularGraphCatalogue.json
data/geometry/scharein/: README  SchareinKnotCatalogue.json  SchareinLinkCatalogue.json  SchareinMinimalKnotCatalogue.json  SchareinMinimalLinkCatalogue.json
data/graph/sage/: README  small-graphs.json
data/lpc/: fate.lpc
data/oeis/: oeis.json
data/pbm/: fh.pbm
data/roland/d50/: Makefile  PN-D50-01.syx  PN-D50-02.syx  PN-D50-03.syx  PN-D50-04.syx  PN-D50-05.syx
data/sobol/: README  kuo.json
data/speech/: README  cs.csv  homophones.text  pb.csv  stk.csv
data/statistics/: AnscombesQuartet.csv  README  nist.json
data/text/: stopwords-mathematica.text
data/text/unicode/: README  unicode-character-table.json
data/types/: mime.types
data/yamaha/: Makefile
data/yamaha/dx7/: Makefile  ROM1A.syx.text
data/yamaha/dx7ii/: dx7ii-man.text
data/yamaha/dx7s/: CARTA.syx  CARTB.syx  INTA.syx
data/yamaha/tx7/: Makefile  tx7-man.text
data/yamaha/tx816/: Makefile
md/: akwf.md  ats.md  au-to-pbm.md  au-to-pgm.md  chemistry.md  csv-mnd-to-pgm.md  csv-plot.md  csv-to-img.md  d50-sysex.md  d50.md  data.md  dx7-hex.md  dx7-unpack.md  dx7.md  img-edit.md  img-to-pbm.md  img-to-pgm.md  img-to-sf.md  lpc.md  lxvst-stat.md  midi-to-csv-mnd.md  midi-to-text.md  midi.md  pbm-indices.md  pbm-to-csv-mnd.md  pbm-to-tbl.md  pbm-trace.md  pdb.md  pgm-to-au.md  pvoc-header.md  pvoc.md  sf-condense.md  sf-draw.md  sf-to-png.md  text-monitor.md  text-osc.md  trace-rec-x11.md  wv.md  x11-ptr-to-midi-osc.md  x11.md
mk/: akwf.hs  dx7.mk  gen-data.hs
(+222 files in other folders)
