Name:              hsc3-data
Version:           0.19
Synopsis:          haskell supercollider data
Description:       Data related functions useful when working with SC3.
License:           GPL
Category:          Sound
Copyright:         (c) Rohan Drape, 2013-2020
Author:            Rohan Drape
Maintainer:        rd@rohandrape.net
Stability:         Experimental
Homepage:          http://rohandrape.net/t/hsc3-data
Tested-With:       GHC == 8.6.5
Build-Type:        Simple
Cabal-Version:     >= 1.8

Data-files:        README

Library
  Build-Depends:   array,
                   base >= 4.8 && < 5,
                   binary,
                   bitwise,
                   bytestring,
                   colour,
                   containers,
                   directory,
                   filepath,
                   FloatingHex,
                   Glob,
                   graphviz,
                   hcg-minus == 0.19.*,
                   HCodecs,
                   hmt == 0.19.*,
                   hosc == 0.19.*,
                   hosc-json == 0.19.*,
                   hsc3 == 0.19.*,
                   hsc3-lang == 0.19.*,
                   hsc3-plot == 0.19.*,
                   hsc3-sf == 0.19.*,
                   hsc3-sf-hsndfile == 0.19.*,
                   JuicyPixels,
                   language-dot,
                   midi-osc == 0.19.*,
                   murmur-hash,
                   parsec,
                   pgm,
                   process,
                   safe,
                   split,
                   SVGPath >= 1.1.1,
                   text,
                   time,
                   unordered-containers,
                   vector,
                   websockets,
                   X11,
                   xml,
                   zmidi-core
  GHC-Options:     -Wall -fwarn-tabs
  Exposed-modules: Sound.SC3.Data.AKAI.AKP
                   Sound.SC3.Data.AKAI.S900
                   Sound.SC3.Data.Array.CSV
                   Sound.SC3.Data.ATS
                   Sound.SC3.Data.Bitmap.Font.BDF
                   Sound.SC3.Data.Bitmap.Font.CP437
                   Sound.SC3.Data.Bitmap.PBM
                   Sound.SC3.Data.Bitmap.Type
                   Sound.SC3.Data.Buffer
                   Sound.SC3.Data.Byte
                   Sound.SC3.Data.Chemistry.AFLOW
                   Sound.SC3.Data.Chemistry.CLS
                   Sound.SC3.Data.Chemistry.Elements
                   Sound.SC3.Data.Chemistry.FASTA
                   Sound.SC3.Data.Chemistry.IUPAC
                   Sound.SC3.Data.Chemistry.MOL
                   Sound.SC3.Data.Chemistry.MP
                   Sound.SC3.Data.Chemistry.PDB
                   Sound.SC3.Data.Chemistry.PDB.Parse
                   Sound.SC3.Data.Chemistry.PDB.Query
                   Sound.SC3.Data.Chemistry.PDB.Remark
                   Sound.SC3.Data.Chemistry.PDB.Types
                   Sound.SC3.Data.Chemistry.POSCAR
                   Sound.SC3.Data.Chemistry.STRUCT
                   Sound.SC3.Data.Chemistry.XYZ
                   Sound.SC3.Data.CMUdict
                   Sound.SC3.Data.Colour
                   Sound.SC3.Data.Fairlight.CMI
                   Sound.SC3.Data.Geography.Core
                   Sound.SC3.Data.Geography.G
                   Sound.SC3.Data.Gnus
                   Sound.SC3.Data.Graph.Dot
                   Sound.SC3.Data.Image.PGM
                   Sound.SC3.Data.Image.Plain
                   Sound.SC3.Data.Image.Type
                   Sound.SC3.Data.Korg.Minilogue
                   Sound.SC3.Data.LPC
                   Sound.SC3.Data.Math.Bourke
                   Sound.SC3.Data.Math.Bouwkamp
                   Sound.SC3.Data.Math.Easing
                   Sound.SC3.Data.Math.Hermite
                   Sound.SC3.Data.Math.IFS
                   Sound.SC3.Data.Math.Loudness
                   Sound.SC3.Data.Math.Sprott_1993a
                   Sound.SC3.Data.Math.Types
                   Sound.SC3.Data.Math.Weaire_Phelan
                   Sound.SC3.Data.Midi.Arturia.BS
                   Sound.SC3.Data.Midi.File.C
                   Sound.SC3.Data.Midi.File.Z
                   Sound.SC3.Data.Midi.Plain
                   Sound.SC3.Data.Modal
                   Sound.SC3.Data.PVOC
                   Sound.SC3.Data.Reverb
                   Sound.SC3.Data.Roland.D50
                   Sound.SC3.Data.Roland.D50.DB
                   Sound.SC3.Data.Roland.D50.Hash
                   Sound.SC3.Data.Roland.D50.PCM
                   Sound.SC3.Data.Roland.D50.PM
                   Sound.SC3.Data.Roland.D50.PP
                   Sound.SC3.Data.Roland.D50.Reverb
                   Sound.SC3.Data.Speech
                   Sound.SC3.Data.Speech.CS
                   Sound.SC3.Data.Speech.PB
                   Sound.SC3.Data.Speech.Stk
                   Sound.SC3.Data.SFZ
                   Sound.SC3.Data.Timestamp
                   Sound.SC3.Data.Trace
                   Sound.SC3.Data.UI.HTML
                   Sound.SC3.Data.UI.ST
                   Sound.SC3.Data.UI.WS
                   Sound.SC3.Data.URandom
                   Sound.SC3.Data.VST
                   Sound.SC3.Data.VST.Obxd
                   Sound.SC3.Data.WT.AKWF
                   Sound.SC3.Data.X11.Ptr
                   Sound.SC3.Data.XML
                   Sound.SC3.Data.XML.JVX
                   Sound.SC3.Data.XML.KML
                   Sound.SC3.Data.XML.SVG
                   Sound.SC3.Data.XML.SVL
                   Sound.SC3.Data.Yamaha.DX7
                   Sound.SC3.Data.Yamaha.DX7.AFX
                   Sound.SC3.Data.Yamaha.DX7.Algorithm
                   Sound.SC3.Data.Yamaha.DX7.CART
                   Sound.SC3.Data.Yamaha.DX7.DB
                   Sound.SC3.Data.Yamaha.DX7.Dexed
                   Sound.SC3.Data.Yamaha.DX7.Dexed.EG
                   Sound.SC3.Data.Yamaha.DX7.DX7II
                   Sound.SC3.Data.Yamaha.DX7.Hash
                   Sound.SC3.Data.Yamaha.DX7.PP
                   Sound.SC3.Data.Yamaha.DX7.PX7
                   Sound.SC3.Data.Yamaha.DX7.TX7
                   Sound.SC3.Data.Yamaha.DX7.TX816
                   Sound.SC3.Data.Yamaha.DX7.UI

Source-Repository  head
  Type:            darcs
  Location:        http://rohandrape.net/sw/hsc3-data
