Cabal-Version:     2.4
Name:              hsc3-data
Version:           0.20
Synopsis:          haskell supercollider data
Description:       Data related functions useful when working with SC3.
License:           GPL-3.0-only
Category:          Sound
Copyright:         (c) Rohan Drape, 2013-2022
Author:            Rohan Drape
Maintainer:        rd@rohandrape.net
Stability:         Experimental
Homepage:          http://rohandrape.net/t/hsc3-data
Tested-With:       GHC == 8.8.4
Build-Type:        Simple

Data-files:        README.md

Library
  Build-Depends:   array,
                   base >= 4.8 && < 5,
                   binary,
                   bitwise,
                   bytestring,
                   bytestring-lexing,
                   colour,
                   containers,
                   directory,
                   filepath,
                   FloatingHex,
                   Glob,
                   graphviz,
                   HCodecs,
                   hcg-minus == 0.20.*,
                   hmt-base == 0.20.*,
                   hmt == 0.20.*,
                   hosc == 0.20.*,
                   hsc3 == 0.20.*,
                   hsc3-lang == 0.20.*,
                   hsc3-plot == 0.20.*,
                   hsc3-sf == 0.20.*,
                   hsc3-sf-hsndfile == 0.20.*,
                   hsc3-ui == 0.20.*,
                   JuicyPixels,
                   language-dot,
                   midi-osc == 0.20.*,
                   murmur-hash,
                   parsec,
                   pgm,
                   process,
                   safe,
                   split,
                   strict,
                   SVGPath >= 1.1.1,
                   text,
                   time,
                   unordered-containers,
                   vector,
                   X11,
                   xml,
                   zmidi-core
  default-language:Haskell2010
  GHC-Options:     -Wall -fwarn-tabs
  Exposed-modules: Sound.Sc3.Data.AKAI.AKP
                   Sound.Sc3.Data.AKAI.S900
                   Sound.Sc3.Data.Array.CSV
                   Sound.Sc3.Data.ATS
                   Sound.Sc3.Data.Bitmap.Font.BDF
                   Sound.Sc3.Data.Bitmap.Font.CP437
                   Sound.Sc3.Data.Bitmap.Font.Segment
                   Sound.Sc3.Data.Bitmap.PBM
                   Sound.Sc3.Data.Bitmap.Type
                   Sound.Sc3.Data.Buffer
                   Sound.Sc3.Data.Byte
                   Sound.Sc3.Data.Chemistry.AFLOW
                   Sound.Sc3.Data.Chemistry.CLS
                   Sound.Sc3.Data.Chemistry.Elements
                   Sound.Sc3.Data.Chemistry.FASTA
                   Sound.Sc3.Data.Chemistry.IUPAC
                   Sound.Sc3.Data.Chemistry.MOL
                   Sound.Sc3.Data.Chemistry.MP
                   Sound.Sc3.Data.Chemistry.PDB
                   Sound.Sc3.Data.Chemistry.PDB.Parse
                   Sound.Sc3.Data.Chemistry.PDB.Query
                   Sound.Sc3.Data.Chemistry.PDB.Remark
                   Sound.Sc3.Data.Chemistry.PDB.Types
                   Sound.Sc3.Data.Chemistry.POSCAR
                   Sound.Sc3.Data.Chemistry.STRUCT
                   Sound.Sc3.Data.Chemistry.XYZ
                   Sound.Sc3.Data.CMUdict
                   Sound.Sc3.Data.Colour
                   Sound.Sc3.Data.Fairlight.Cmi
                   Sound.Sc3.Data.Geography.Core
                   Sound.Sc3.Data.Geography.G
                   Sound.Sc3.Data.Geometry.Obj
                   Sound.Sc3.Data.Geometry.Ply
                   Sound.Sc3.Data.Geometry.Tutte
                   Sound.Sc3.Data.Gnus
                   Sound.Sc3.Data.Graph.Dot
                   Sound.Sc3.Data.Image.PGM
                   Sound.Sc3.Data.Image.Plain
                   Sound.Sc3.Data.Image.Type
                   Sound.Sc3.Data.Korg.Minilogue
                   Sound.Sc3.Data.LPC
                   Sound.Sc3.Data.Math.Bourke
                   Sound.Sc3.Data.Math.Bouwkamp
                   Sound.Sc3.Data.Math.Easing
                   Sound.Sc3.Data.Math.Hermite
                   Sound.Sc3.Data.Math.IFS
                   Sound.Sc3.Data.Math.Loudness
                   Sound.Sc3.Data.Math.Sprott_1993a
                   Sound.Sc3.Data.Math.Types
                   Sound.Sc3.Data.Math.Weaire_Phelan
                   Sound.Sc3.Data.Midi.Arturia.BeatStep
                   Sound.Sc3.Data.Midi.File.C
                   Sound.Sc3.Data.Midi.File.Z
                   Sound.Sc3.Data.Midi.Plain
                   Sound.Sc3.Data.Modal
                   Sound.Sc3.Data.PVOC
                   Sound.Sc3.Data.Reverb
                   Sound.Sc3.Data.Roland.D50
                   Sound.Sc3.Data.Roland.D50.DB
                   Sound.Sc3.Data.Roland.D50.Hash
                   Sound.Sc3.Data.Roland.D50.PCM
                   Sound.Sc3.Data.Roland.D50.PM
                   Sound.Sc3.Data.Roland.D50.PP
                   Sound.Sc3.Data.Roland.D50.Reverb
                   Sound.Sc3.Data.Speech.CS
                   Sound.Sc3.Data.Speech.Homophones
                   Sound.Sc3.Data.Speech.PB
                   Sound.Sc3.Data.Speech.Stk
                   Sound.Sc3.Data.Sfz
                   Sound.Sc3.Data.String.ByteString
                   Sound.Sc3.Data.String.String
                   Sound.Sc3.Data.Timestamp
                   Sound.Sc3.Data.Trace
                   Sound.Sc3.Data.URandom
                   Sound.Sc3.Data.VST
                   Sound.Sc3.Data.VST.Obxd
                   Sound.Sc3.Data.WT.AKWF
                   Sound.Sc3.Data.X11.Ptr
                   Sound.Sc3.Data.XML
                   Sound.Sc3.Data.XML.CCCBR
                   Sound.Sc3.Data.XML.JVX
                   Sound.Sc3.Data.XML.KML
                   Sound.Sc3.Data.XML.SVG
                   Sound.Sc3.Data.XML.SVL
                   Sound.Sc3.Data.Yamaha.DX7
                   Sound.Sc3.Data.Yamaha.DX7.AFX
                   Sound.Sc3.Data.Yamaha.DX7.Algorithm
                   Sound.Sc3.Data.Yamaha.DX7.CART
                   Sound.Sc3.Data.Yamaha.DX7.DB
                   Sound.Sc3.Data.Yamaha.DX7.Dexed
                   Sound.Sc3.Data.Yamaha.DX7.Dexed.EG
                   Sound.Sc3.Data.Yamaha.DX7.DX7II
                   Sound.Sc3.Data.Yamaha.DX7.Hash
                   Sound.Sc3.Data.Yamaha.DX7.PP
                   Sound.Sc3.Data.Yamaha.DX7.PX7
                   Sound.Sc3.Data.Yamaha.DX7.Sc3
                   Sound.Sc3.Data.Yamaha.DX7.TX7
                   Sound.Sc3.Data.Yamaha.DX7.TX816
                   Sound.Sc3.Data.Yamaha.DX7.UI

Source-Repository  head
  Type:            git
  Location:        https://gitlab.com/rd--/hsc3-data
