Cabal-Version:     2.4
Name:              hsc3-data
Version:           0.20
Synopsis:          haskell supercollider data
Description:       Data related functions useful when working with SC3.
License:           GPL-3.0-only
Category:          Sound
Copyright:         (c) Rohan Drape, 2013-2022
Author:            Rohan Drape
Maintainer:        rd@rohandrape.net
Stability:         Experimental
Homepage:          http://rohandrape.net/t/hsc3-data
Tested-With:       GHC == 8.8.4
Build-Type:        Simple

Data-files:        README.md

Library
  Build-Depends:   array,
                   base >= 4.8 && < 5,
                   binary,
                   bitwise,
                   bytestring,
                   bytestring-lexing,
                   colour,
                   containers,
                   directory,
                   filepath,
                   FloatingHex,
                   Glob,
                   graphviz,
                   HCodecs,
                   hcg-minus == 0.20.*,
                   hmt-base == 0.20.*,
                   hmt == 0.20.*,
                   hosc == 0.20.*,
                   hsc3 == 0.20.*,
                   hsc3-lang == 0.20.*,
                   hsc3-plot == 0.20.*,
                   hsc3-sf == 0.20.*,
                   hsc3-sf-hsndfile == 0.20.*,
                   hsc3-ui == 0.20.*,
                   JuicyPixels,
                   language-dot,
                   midi-osc == 0.20.*,
                   murmur-hash,
                   parsec,
                   pgm,
                   process,
                   safe,
                   split,
                   strict,
                   SVGPath >= 1.1.1,
                   text,
                   time,
                   unordered-containers,
                   vector,
                   X11,
                   xml,
                   zmidi-core
  default-language:Haskell2010
  GHC-Options:     -Wall -fwarn-tabs
  Exposed-modules: Sound.Sc3.Data.Akai.Akp
                   Sound.Sc3.Data.Akai.S900
                   Sound.Sc3.Data.Array.Csv
                   Sound.Sc3.Data.Ats
                   Sound.Sc3.Data.Bitmap.Font.Bdf
                   Sound.Sc3.Data.Bitmap.Font.Cp437
                   Sound.Sc3.Data.Bitmap.Font.Segment
                   Sound.Sc3.Data.Bitmap.Pbm
                   Sound.Sc3.Data.Bitmap.Type
                   Sound.Sc3.Data.Buffer
                   Sound.Sc3.Data.Byte
                   Sound.Sc3.Data.Chemistry.Aflow
                   Sound.Sc3.Data.Chemistry.Cls
                   Sound.Sc3.Data.Chemistry.Elements
                   Sound.Sc3.Data.Chemistry.Fasta
                   Sound.Sc3.Data.Chemistry.Iupac
                   Sound.Sc3.Data.Chemistry.Mol
                   Sound.Sc3.Data.Chemistry.Mp
                   Sound.Sc3.Data.Chemistry.Pdb
                   Sound.Sc3.Data.Chemistry.Pdb.Parse
                   Sound.Sc3.Data.Chemistry.Pdb.Query
                   Sound.Sc3.Data.Chemistry.Pdb.Remark
                   Sound.Sc3.Data.Chemistry.Pdb.Types
                   Sound.Sc3.Data.Chemistry.Poscar
                   Sound.Sc3.Data.Chemistry.Struct
                   Sound.Sc3.Data.Chemistry.Xyz
                   Sound.Sc3.Data.CmuDict
                   Sound.Sc3.Data.Colour
                   Sound.Sc3.Data.Fairlight.Cmi
                   Sound.Sc3.Data.Geography.Core
                   Sound.Sc3.Data.Geography.Loc
                   Sound.Sc3.Data.Geometry.Obj
                   Sound.Sc3.Data.Geometry.Ply
                   Sound.Sc3.Data.Geometry.Tutte
                   Sound.Sc3.Data.Gnus
                   Sound.Sc3.Data.Graph.Dot
                   Sound.Sc3.Data.Image.Pgm
                   Sound.Sc3.Data.Image.Plain
                   Sound.Sc3.Data.Image.Type
                   Sound.Sc3.Data.Korg.Minilogue
                   Sound.Sc3.Data.Lpc
                   Sound.Sc3.Data.Math.Bourke
                   Sound.Sc3.Data.Math.Bouwkamp
                   Sound.Sc3.Data.Math.Easing
                   Sound.Sc3.Data.Math.Hermite
                   Sound.Sc3.Data.Math.IFS
                   Sound.Sc3.Data.Math.Loudness
                   Sound.Sc3.Data.Math.Sprott_1993a
                   Sound.Sc3.Data.Math.Types
                   Sound.Sc3.Data.Math.Weaire_Phelan
                   Sound.Sc3.Data.Midi.Arturia.BeatStep
                   Sound.Sc3.Data.Midi.File.C
                   Sound.Sc3.Data.Midi.File.Z
                   Sound.Sc3.Data.Midi.Plain
                   Sound.Sc3.Data.Modal
                   Sound.Sc3.Data.Pvoc
                   Sound.Sc3.Data.Reverb
                   Sound.Sc3.Data.Roland.D50
                   Sound.Sc3.Data.Roland.D50.Db
                   Sound.Sc3.Data.Roland.D50.Hash
                   Sound.Sc3.Data.Roland.D50.Pcm
                   Sound.Sc3.Data.Roland.D50.Pm
                   Sound.Sc3.Data.Roland.D50.Pp
                   Sound.Sc3.Data.Roland.D50.Reverb
                   Sound.Sc3.Data.Speech.Cs
                   Sound.Sc3.Data.Speech.Homophones
                   Sound.Sc3.Data.Speech.Pb
                   Sound.Sc3.Data.Speech.Stk
                   Sound.Sc3.Data.Sfz
                   Sound.Sc3.Data.String.ByteString
                   Sound.Sc3.Data.String.String
                   Sound.Sc3.Data.Timestamp
                   Sound.Sc3.Data.Trace
                   Sound.Sc3.Data.Urandom
                   Sound.Sc3.Data.Vst
                   Sound.Sc3.Data.Vst.Obxd
                   Sound.Sc3.Data.Wt.Akwf
                   Sound.Sc3.Data.X11.Ptr
                   Sound.Sc3.Data.Xml
                   Sound.Sc3.Data.Xml.Cccbr
                   Sound.Sc3.Data.Xml.Jvx
                   Sound.Sc3.Data.Xml.Kml
                   Sound.Sc3.Data.Xml.Svg
                   Sound.Sc3.Data.Xml.Svl
                   Sound.Sc3.Data.Yamaha.Dx7
                   Sound.Sc3.Data.Yamaha.Dx7.Afx
                   Sound.Sc3.Data.Yamaha.Dx7.Algorithm
                   Sound.Sc3.Data.Yamaha.Dx7.Cart
                   Sound.Sc3.Data.Yamaha.Dx7.Db
                   Sound.Sc3.Data.Yamaha.Dx7.Dexed
                   Sound.Sc3.Data.Yamaha.Dx7.Dexed.Eg
                   Sound.Sc3.Data.Yamaha.Dx7.Dx7ii
                   Sound.Sc3.Data.Yamaha.Dx7.Hash
                   Sound.Sc3.Data.Yamaha.Dx7.Pp
                   Sound.Sc3.Data.Yamaha.Dx7.Px7
                   Sound.Sc3.Data.Yamaha.Dx7.Sc3
                   Sound.Sc3.Data.Yamaha.Dx7.Tx7
                   Sound.Sc3.Data.Yamaha.Dx7.Tx816
                   Sound.Sc3.Data.Yamaha.Dx7.Ui

Source-Repository  head
  Type:            git
  Location:        https://gitlab.com/rd--/hsc3-data
